Generate Pelican site

--- a/installing-cuda-cudnn-tensorflow-nvidia-gtx960.html
+++ b/installing-cuda-cudnn-tensorflow-nvidia-gtx960.html
@@ -82,6 +82,7 @@
       <nav>
         <ul class="list">
           <li><a href="https://leblancfg.com/pages/about.html#about">About</a></li>
+          <li><a href="https://leblancfg.com/pages/projects.html#projects">Projects</a></li>
 
           <li><a href="https://kaggle.com/leblancfg" target="_blank">Kaggle</a></li>
           <li><a href="https://leblancfg.resumeed.com/" target="_blank">Résumé</a></li>
@@ -246,7 +247,7 @@ bazel-bin/tensorflow/tools/pip_package/build_pip_package /tmp/tensorflow_pkg
 
     <footer>
 <p>
-  &copy;  2018 - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>
+  &copy;  2019 - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>
 </p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p><p>
