--- a/pages/projects.html
+++ b/pages/projects.html
@@ -53,8 +53,7 @@
 <meta property="og:url" content="https://leblancfg.com"/>
 <meta property="og:image" content="https://avatars0.githubusercontent.com/u/15659410?s=400&u=e3bc92486becb34e77028eef0f4dfc302540fcb3&v=4">
 
-  <title>leblancfg.com &ndash;     Tag numpy
-</title>
+  <title>leblancfg.com &ndash; Projects</title>
 
 </head>
 <body>
@@ -101,103 +100,29 @@
 
     </nav>
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="https://leblancfg.com/higher-level-functions-python-filter.html#higher-level-functions-python-filter">Higher-level functions in Python, Part 3 - filter</a></h2>
-    <p>
-          Posted on June 14, 2018 in <a href="https://leblancfg.com/category/python.html">Python</a>
-
-
-
-    </p>
+    
+    <h1 id="projects">Projects</h1>
   </header>
   <div>
-      <p>In our final installment for the Higher Level Function in Python Series, we dive into the Python <code>filter</code> function. No sidetracks this time around. We simply take a look at how it's used, try to find a way where it would be superior to list comprehensions, fail, and conclude the series.</p>
-      <br>
-      <a class="btn" href="https://leblancfg.com/higher-level-functions-python-filter.html#higher-level-functions-python-filter">    Continue reading
-</a>
-  </div>
-  <hr />
+<p>Here's a short list of projects I've undertaken in the past.</p>
+<h2>autocrop.io</h2>
+<p><a href="https://github.com/leblancfg/autocrop">Open source project</a>, currently working on API server and self-hosted service. Perfect for profile picture processing for your website or batch work for ID cards, autocrop will output images centered around the biggest face detected.</p>
+<blockquote>
+<p>Visit the <a href="https://autocrop.io">website here</a>.</p>
+</blockquote>
+<h2>Bayesian Inference Study Group</h2>
+<p>Put together this little website to serve as a backdrop for a series of study group sessions organized internally for public servants across the Canadian Government. We are currently follwing John Kruschke's Doing Bayesian Data Analysis textbook, 2<sup>nd</sup> edition.</p>
+<blockquote>
+<p>Visit the <a href="https://bayes.leblancfg.com">website here</a>.</p>
+</blockquote>
+<h2>Jupyter-bayes</h2>
+<p>Docker container for Jupyter notebook server, fully loaded Bayesian inference data science environment in R, Python and Julia.</p>
+<blockquote>
+<p>Visit the <a href="https://leblancfg.com/jupyter-bayes/">website here</a>.</p>
+</blockquote>  </div>
 </article>
-<article>
-  <header>
-    <h2><a href="https://leblancfg.com/higher-level-functions-python-reduce.html#higher-level-functions-python-reduce">Higher-level functions in Python, Part 2 - reduce</a></h2>
-    <p>
-          Posted on June 04, 2018 in <a href="https://leblancfg.com/category/python.html">Python</a>
-
-
-
-    </p>
-  </header>
-  <div>
-      <p>We go through uses of the Python <code>reduce</code> function, when it's useful and its performance benefits. This time, we spend some time exploring function composition, and how to manage large function chains, e.g. in a data processing pipeline.</p>
-      <br>
-      <a class="btn" href="https://leblancfg.com/higher-level-functions-python-reduce.html#higher-level-functions-python-reduce">    Continue reading
-</a>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="https://leblancfg.com/higher-level-functions-python-map.html#higher-level-functions-python-map">Higher-level functions in Python, Part 1 - map</a></h2>
-    <p>
-          Posted on May 30, 2018 in <a href="https://leblancfg.com/category/python.html">Python</a>
-
-
-
-    </p>
-  </header>
-  <div>
-      <p>We go through uses of the Python <code>map</code> function, when it's useful and its performance benefits, and get sidetracked into benchmarking different syntaxes for exponential expressions.</p>
-      <br>
-      <a class="btn" href="https://leblancfg.com/higher-level-functions-python-map.html#higher-level-functions-python-map">    Continue reading
-</a>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-2.html#getting-started-with-python-and-jupyter-notebooks-2">Introduction to the Python Scientific Ecosystem, Part 2</a></h2>
-    <p>
-          Posted on August 10, 2017 in <a href="https://leblancfg.com/category/python.html">Python</a>
-
-
-
-    </p>
-  </header>
-  <div>
-      <p>A general primer on Python for science and engineering, with an emphasis on the SciPy ecosystem of packages.</p>
-      <br>
-      <a class="btn" href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-2.html#getting-started-with-python-and-jupyter-notebooks-2">    Continue reading
-</a>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-1.html#getting-started-with-python-and-jupyter-notebooks-1">Introduction to the Python Scientific Ecosystem, Part 1</a></h2>
-    <p>
-          Posted on August 03, 2017 in <a href="https://leblancfg.com/category/python.html">Python</a>
-
-
-
-    </p>
-  </header>
-  <div>
-      <p>A general primer on Python for science and engineering, with an emphasis on the SciPy ecosystem of packages.</p>
-      <br>
-      <a class="btn" href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-1.html#getting-started-with-python-and-jupyter-notebooks-1">    Continue reading
-</a>
-  </div>
-</article>
-
-  <div class="pagination">
-  </div>
-
-
-
 
     <footer>
 <p>
