--- a/pages/about.html
+++ b/pages/about.html
@@ -70,7 +70,6 @@
           <li><a href="https://leblancfg.com/pages/about.html#about">About</a></li>
           <li><a href="https://leblancfg.com/pages/projects.html#projects">Projects</a></li>
 
-          <li><a href="https://kaggle.com/leblancfg" target="_blank">Kaggle</a></li>
           <li><a href="https://leblancfg.resumeed.com/" target="_blank">Résumé</a></li>
         </ul>
       </nav>
@@ -107,7 +106,7 @@
   </header>
   <div>
 <p>I’m interested in data, Earth Observation, statistical learning, evolution, biological and theoretical physics, neural networks, food science, and more specifically looking to further explore geospatial analysis, generative algorithms, and adaptive learning.</p>
-<p>I am currently employed at Treasury Board of Canada Secretariat as a Data Scientist. I previously worked for the Canadian Space Agency, Environemnt and Climate Change Canada, and Transport Canada. Before that, I spent many years playing music and tending bar. I have a B.Sc. in Geology, with most senior-level credits in Physics. I am currently pursuing the Data Science postgraduate certificate from UC Irvine Extension.</p>
+<p>I am currently employed at Treasury Board of Canada Secretariat as a Data Scientist. I previously worked for the Canadian Space Agency, Environment and Climate Change Canada, and Transport Canada. Before that, I spent many years playing music and tending bar. I have a B.Sc. in Geology, with most senior-level credits in Physics. I am currently pursuing the Data Science postgraduate certificate from UC Irvine Extension.</p>
 <p>In my free time, I enjoy reading (I’m a huge sci-fi nerd!), rock climbing, conversation, cycling, musical exploration, and of course anything food-related, from amazing cocktails, weird DIY pickles, to making the perfect pork shoulder. I share this passion with my wife, who runs a wonderful <a href="https://squeezemylemon.ca">blog chronicling her culinary experiences</a>. People I look up to include Frank Zappa, Richard Feynman, J.K. Rowling, Peter Norvig, and Geoffrey Hinton. You can find me on <a href="https://www.kaggle.com/leblancfg">Kaggle</a>, <a href="https://github.com/leblancfg">Github</a>, <a href="https://twitter.com/leblancfg1">Twitter</a> and <a href="https://www.linkedin.com/in/françois-leblanc-07294b106">LinkedIn</a>.</p>
 <p>You can take a look at my résumé by clicking <a href="leblancfg_CV.pdf">here</a>.</p>  </div>
 </article>
