Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -125,6 +125,12 @@
   </header>
   <div>
     <dl>
+      <dt>June 30, 2019</dt>
+      <dd><a href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html">CrossFit Open 2019 Analysis - Exercise Statistics</a></dd>
+      <dt>June 15, 2019</dt>
+      <dd><a href="https://leblancfg.com/crossfit_open_2019_analysis_benchmark_workouts.html">CrossFit Open 2019 Analysis - Benchmark Workouts</a></dd>
+      <dt>June 01, 2019</dt>
+      <dd><a href="https://leblancfg.com/crossfit_open_2019_analysis_athlete_statistics.html">CrossFit Open 2019 Analysis - Athlete Statistics</a></dd>
       <dt>December 03, 2018</dt>
       <dd><a href="https://leblancfg.com/installing-azure-cli-on-manjaro-arch-with-anaconda.html">Installing the Azure CLI on Manjaro (Arch) with Anaconda</a></dd>
       <dt>September 14, 2018</dt>
