--- a/tags.html
+++ b/tags.html
@@ -126,11 +126,13 @@
   <div>
     <ul class="list">          <li><a href="https://leblancfg.com/tag/anaconda.html">anaconda</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/arch.html">arch</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/athlete.html">athlete</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/azure.html">azure</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/beginner.html">beginner</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/benchmarks.html">benchmarks</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/cli.html">cli</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/conda.html">conda</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/crossfit.html">crossfit</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/cuda.html">cuda</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/cudnn.html">cudnn</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/functional.html">functional</a> (3)</li>
@@ -144,9 +146,10 @@
           <li><a href="https://leblancfg.com/tag/mutability.html">mutability</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/numpy.html">numpy</a> (5)</li>
           <li><a href="https://leblancfg.com/tag/nvidia.html">nvidia</a> (1)</li>
-          <li><a href="https://leblancfg.com/tag/python.html">python</a> (6)</li>
+          <li><a href="https://leblancfg.com/tag/python.html">python</a> (9)</li>
           <li><a href="https://leblancfg.com/tag/scipy.html">scipy</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/shapely.html">shapely</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/summary-statistics.html">summary statistics</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/tensorflow.html">tensorflow</a> (1)</li>
     </ul>
   </div>
