--- a/categories.html
+++ b/categories.html
@@ -125,6 +125,7 @@
   </header>
   <div>
     <ul class="list">
+      <li><a href="https://leblancfg.com/category/crossfit-python.html">CrossFit, Python</a> (3)</li>
       <li><a href="https://leblancfg.com/category/linux.html">Linux</a> (2)</li>
       <li><a href="https://leblancfg.com/category/python.html">Python</a> (6)</li>
     </ul>
