--- a/index.html
+++ b/index.html
@@ -121,6 +121,60 @@
 
 <article>
   <header>
+    <h2><a href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html#crossfit_open_2019_analysis_exercise_statistics">CrossFit Open 2019 Analysis - Exercise Statistics</a></h2>
+    <p>
+          Posted on June 30, 2019 in <a href="https://leblancfg.com/category/crossfit-python.html">CrossFit, Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>In this article, we take a deeper dive into the benchmark exercise times and weights for the CrossFit Open athletes, including running, squat, deadlift, clean &amp; jerk, and snatch.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html#crossfit_open_2019_analysis_exercise_statistics">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://leblancfg.com/crossfit_open_2019_analysis_benchmark_workouts.html#crossfit_open_2019_analysis_benchmark_workouts">CrossFit Open 2019 Analysis - Benchmark Workouts</a></h2>
+    <p>
+          Posted on June 15, 2019 in <a href="https://leblancfg.com/category/crossfit-python.html">CrossFit, Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>In this final article on CrossFit athlete statistics, we take a look at the spread of times for the sport's iconic workouts: Fran, Grace, Helen, Filthy Fifty, and Fight Gone Bad.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/crossfit_open_2019_analysis_benchmark_workouts.html#crossfit_open_2019_analysis_benchmark_workouts">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://leblancfg.com/crossfit_open_2019_analysis_athlete_statistics.html#crossfit_open_2019_analysis_athlete_statistics">CrossFit Open 2019 Analysis - Athlete Statistics</a></h2>
+    <p>
+          Posted on June 01, 2019 in <a href="https://leblancfg.com/category/crossfit-python.html">CrossFit, Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>In this article, we disect the various physical, strength and athletic attributes of hundreds of thousands of CrossFit athletes.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/crossfit_open_2019_analysis_athlete_statistics.html#crossfit_open_2019_analysis_athlete_statistics">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://leblancfg.com/installing-azure-cli-on-manjaro-arch-with-anaconda.html#installing-azure-cli-on-manjaro-arch-with-anaconda">Installing the Azure CLI on Manjaro (Arch) with Anaconda</a></h2>
     <p>
           Posted on December 03, 2018 in <a href="https://leblancfg.com/category/linux.html">Linux</a>
@@ -243,27 +297,13 @@
         <a class="btn" href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-2.html#getting-started-with-python-and-jupyter-notebooks-2">    Continue reading
 </a>
   </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-1.html#getting-started-with-python-and-jupyter-notebooks-1">Introduction to the Python Scientific Ecosystem, Part 1</a></h2>
-    <p>
-          Posted on August 03, 2017 in <a href="https://leblancfg.com/category/python.html">Python</a>
-
-
-
-    </p>
-  </header>
-  <div>
-      <p>A general primer on Python for science and engineering, with an emphasis on the SciPy ecosystem of packages.</p>
-        <br>
-        <a class="btn" href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-1.html#getting-started-with-python-and-jupyter-notebooks-1">    Continue reading
-</a>
-  </div>
 </article>
 
   <div class="pagination">
+    <a class="btn float-left" href="https://leblancfg.com/index2.html">
+      <i class="fa fa-angle-left"></i>     Older Posts
+
+    </a>
   </div>
 
 
