Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/stylesheet/style.min.css">
 
   <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/solid.css">
 
 
     <link href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom">
@@ -75,10 +77,26 @@
       </nav>
 
       <ul class="social">
-        <li><a class="sc-linkedin" href="https://www.linkedin.com/in/fran%C3%A7ois-leblanc-07294b106/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-        <li><a class="sc-github" href="https://github.com/leblancfg" target="_blank"><i class="fa fa-github"></i></a></li>
-        <li><a class="sc-twitter" href="https://twitter.com/leblancfg1" target="_blank"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="sc-rss" href="https://leblancfg.com/feeds/all.atom.xml" target="_blank"><i class="fa fa-rss"></i></a></li>
+          <li>
+            <a  class="sc-linkedin" href="https://www.linkedin.com/in/fran%C3%A7ois-leblanc-07294b106/" target="_blank">
+            <i class="fab fa-linkedin">
+            </i>
+          </a></li>
+          <li>
+            <a  class="sc-github" href="https://github.com/leblancfg" target="_blank">
+            <i class="fab fa-github">
+            </i>
+          </a></li>
+          <li>
+            <a  class="sc-twitter" href="https://twitter.com/leblancfg1" target="_blank">
+            <i class="fab fa-twitter">
+            </i>
+          </a></li>
+          <li>
+            <a  class="sc-rss" href="https://leblancfg.com/feeds/all.atom.xml" target="_blank">
+            <i class="fas fa-rss">
+            </i>
+          </a></li>
       </ul>
     </div>
 
@@ -103,6 +121,60 @@
 
 <article>
   <header>
+    <h2><a href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html#crossfit_open_2019_analysis_exercise_statistics">CrossFit Open 2019 Analysis - Exercise Statistics</a></h2>
+    <p>
+          Posted on June 30, 2019 in <a href="https://leblancfg.com/category/crossfit-python.html">CrossFit, Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>In this article, we take a deeper dive into the benchmark exercise times and weights for the CrossFit Open athletes, including running, squat, deadlift, clean &amp; jerk, and snatch.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html#crossfit_open_2019_analysis_exercise_statistics">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://leblancfg.com/crossfit_open_2019_analysis_benchmark_workouts.html#crossfit_open_2019_analysis_benchmark_workouts">CrossFit Open 2019 Analysis - Benchmark Workouts</a></h2>
+    <p>
+          Posted on June 15, 2019 in <a href="https://leblancfg.com/category/crossfit-python.html">CrossFit, Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>In this final article on CrossFit athlete statistics, we take a look at the spread of times for the sport's iconic workouts: Fran, Grace, Helen, Filthy Fifty, and Fight Gone Bad.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/crossfit_open_2019_analysis_benchmark_workouts.html#crossfit_open_2019_analysis_benchmark_workouts">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://leblancfg.com/crossfit_open_2019_analysis_athlete_statistics.html#crossfit_open_2019_analysis_athlete_statistics">CrossFit Open 2019 Analysis - Athlete Statistics</a></h2>
+    <p>
+          Posted on June 01, 2019 in <a href="https://leblancfg.com/category/crossfit-python.html">CrossFit, Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>In this article, we disect the various physical, strength and athletic attributes of hundreds of thousands of CrossFit athletes.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/crossfit_open_2019_analysis_athlete_statistics.html#crossfit_open_2019_analysis_athlete_statistics">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://leblancfg.com/installing-azure-cli-on-manjaro-arch-with-anaconda.html#installing-azure-cli-on-manjaro-arch-with-anaconda">Installing the Azure CLI on Manjaro (Arch) with Anaconda</a></h2>
     <p>
           Posted on December 03, 2018 in <a href="https://leblancfg.com/category/linux.html">Linux</a>
@@ -113,8 +185,26 @@
   </header>
   <div>
       <p>A short guide to troubleshooting the installation of Microsoft's Azure Command Line Interface (CLI) on Manjaro Linux</p>
-      <br>
-      <a class="btn" href="https://leblancfg.com/installing-azure-cli-on-manjaro-arch-with-anaconda.html#installing-azure-cli-on-manjaro-arch-with-anaconda">    Continue reading
+        <br>
+        <a class="btn" href="https://leblancfg.com/installing-azure-cli-on-manjaro-arch-with-anaconda.html#installing-azure-cli-on-manjaro-arch-with-anaconda">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://leblancfg.com/unhashable-python-unique-locations-geometry-geodataframe.html#unhashable-python-unique-locations-geometry-geodataframe">Unhashable in Python - Getting the unique number of locations in a GeoDataFrame</a></h2>
+    <p>
+          Posted on September 14, 2018 in <a href="https://leblancfg.com/category/python.html">Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>I encounter an unhashable type error when trying to get the unique number of geometries in a GeoDataFrame, and we learn about mutability (vs immutability) of Python objects in order to sidestep the issue.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/unhashable-python-unique-locations-geometry-geodataframe.html#unhashable-python-unique-locations-geometry-geodataframe">    Continue reading
 </a>
   </div>
   <hr />
@@ -131,13 +221,89 @@
   </header>
   <div>
       <p>An in-depth, step-by-step guide to installing CUDA, CuDNN and Tensorflow on Linux with an NVIDIA GeFORCE GTX960 graphics card.</p>
-      <br>
-      <a class="btn" href="https://leblancfg.com/installing-cuda-cudnn-tensorflow-nvidia-gtx960.html#installing-cuda-cudnn-tensorflow-nvidia-gtx960">    Continue reading
+        <br>
+        <a class="btn" href="https://leblancfg.com/installing-cuda-cudnn-tensorflow-nvidia-gtx960.html#installing-cuda-cudnn-tensorflow-nvidia-gtx960">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://leblancfg.com/higher-level-functions-python-filter.html#higher-level-functions-python-filter">Higher-level functions in Python, Part 3 - filter</a></h2>
+    <p>
+          Posted on June 14, 2018 in <a href="https://leblancfg.com/category/python.html">Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>In our final installment for the Higher Level Function in Python Series, we dive into the Python <code>filter</code> function. No sidetracks this time around. We simply take a look at how it's used, try to find a way where it would be superior to list comprehensions, fail, and conclude the series.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/higher-level-functions-python-filter.html#higher-level-functions-python-filter">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://leblancfg.com/higher-level-functions-python-reduce.html#higher-level-functions-python-reduce">Higher-level functions in Python, Part 2 - reduce</a></h2>
+    <p>
+          Posted on June 04, 2018 in <a href="https://leblancfg.com/category/python.html">Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>We go through uses of the Python <code>reduce</code> function, when it's useful and its performance benefits. This time, we spend some time exploring function composition, and how to manage large function chains, e.g. in a data processing pipeline.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/higher-level-functions-python-reduce.html#higher-level-functions-python-reduce">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://leblancfg.com/higher-level-functions-python-map.html#higher-level-functions-python-map">Higher-level functions in Python, Part 1 - map</a></h2>
+    <p>
+          Posted on May 30, 2018 in <a href="https://leblancfg.com/category/python.html">Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>We go through uses of the Python <code>map</code> function, when it's useful and its performance benefits, and get sidetracked into benchmarking different syntaxes for exponential expressions.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/higher-level-functions-python-map.html#higher-level-functions-python-map">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-2.html#getting-started-with-python-and-jupyter-notebooks-2">Introduction to the Python Scientific Ecosystem, Part 2</a></h2>
+    <p>
+          Posted on August 10, 2017 in <a href="https://leblancfg.com/category/python.html">Python</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <p>A general primer on Python for science and engineering, with an emphasis on the SciPy ecosystem of packages.</p>
+        <br>
+        <a class="btn" href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-2.html#getting-started-with-python-and-jupyter-notebooks-2">    Continue reading
 </a>
   </div>
 </article>
 
   <div class="pagination">
+    <a class="btn float-left" href="https://leblancfg.com/index2.html">
+      <i class="fa fa-angle-left"></i>     Older Posts
+
+    </a>
   </div>
 
 
