--- a/tags.html
+++ b/tags.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/stylesheet/style.min.css">
 
   <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/solid.css">
 
 
     <link href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom">
@@ -76,10 +78,26 @@
       </nav>
 
       <ul class="social">
-        <li><a class="sc-linkedin" href="https://www.linkedin.com/in/fran%C3%A7ois-leblanc-07294b106/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-        <li><a class="sc-github" href="https://github.com/leblancfg" target="_blank"><i class="fa fa-github"></i></a></li>
-        <li><a class="sc-twitter" href="https://twitter.com/leblancfg1" target="_blank"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="sc-rss" href="https://leblancfg.com/feeds/all.atom.xml" target="_blank"><i class="fa fa-rss"></i></a></li>
+          <li>
+            <a  class="sc-linkedin" href="https://www.linkedin.com/in/fran%C3%A7ois-leblanc-07294b106/" target="_blank">
+            <i class="fab fa-linkedin">
+            </i>
+          </a></li>
+          <li>
+            <a  class="sc-github" href="https://github.com/leblancfg" target="_blank">
+            <i class="fab fa-github">
+            </i>
+          </a></li>
+          <li>
+            <a  class="sc-twitter" href="https://twitter.com/leblancfg1" target="_blank">
+            <i class="fab fa-twitter">
+            </i>
+          </a></li>
+          <li>
+            <a  class="sc-rss" href="https://leblancfg.com/feeds/all.atom.xml" target="_blank">
+            <i class="fas fa-rss">
+            </i>
+          </a></li>
       </ul>
     </div>
 
@@ -106,16 +124,32 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://leblancfg.com/tag/arch.html">arch</a> (1)</li>
+    <ul class="list">          <li><a href="https://leblancfg.com/tag/anaconda.html">anaconda</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/arch.html">arch</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/athlete.html">athlete</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/azure.html">azure</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/beginner.html">beginner</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/benchmarks.html">benchmarks</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/cli.html">cli</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/conda.html">conda</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/crossfit.html">crossfit</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/cuda.html">cuda</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/cudnn.html">cudnn</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/functional.html">functional</a> (3)</li>
+          <li><a href="https://leblancfg.com/tag/geopandas.html">geopandas</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/gpu.html">GPU</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/gtx960.html">GTX960</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/jupyter.html">jupyter</a> (5)</li>
           <li><a href="https://leblancfg.com/tag/linux.html">linux</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/manjaro.html">manjaro</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/matplotlib.html">matplotlib</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/mutability.html">mutability</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/numpy.html">numpy</a> (5)</li>
           <li><a href="https://leblancfg.com/tag/nvidia.html">nvidia</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/python.html">python</a> (9)</li>
+          <li><a href="https://leblancfg.com/tag/scipy.html">scipy</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/shapely.html">shapely</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/summary-statistics.html">summary statistics</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/tensorflow.html">tensorflow</a> (1)</li>
     </ul>
   </div>
