--- a/archives.html
+++ b/archives.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/stylesheet/style.min.css">
 
   <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://leblancfg.com/theme/font-awesome/css/solid.css">
 
 
     <link href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom">
@@ -76,10 +78,26 @@
       </nav>
 
       <ul class="social">
-        <li><a class="sc-linkedin" href="https://www.linkedin.com/in/fran%C3%A7ois-leblanc-07294b106/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-        <li><a class="sc-github" href="https://github.com/leblancfg" target="_blank"><i class="fa fa-github"></i></a></li>
-        <li><a class="sc-twitter" href="https://twitter.com/leblancfg1" target="_blank"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="sc-rss" href="https://leblancfg.com/feeds/all.atom.xml" target="_blank"><i class="fa fa-rss"></i></a></li>
+          <li>
+            <a  class="sc-linkedin" href="https://www.linkedin.com/in/fran%C3%A7ois-leblanc-07294b106/" target="_blank">
+            <i class="fab fa-linkedin">
+            </i>
+          </a></li>
+          <li>
+            <a  class="sc-github" href="https://github.com/leblancfg" target="_blank">
+            <i class="fab fa-github">
+            </i>
+          </a></li>
+          <li>
+            <a  class="sc-twitter" href="https://twitter.com/leblancfg1" target="_blank">
+            <i class="fab fa-twitter">
+            </i>
+          </a></li>
+          <li>
+            <a  class="sc-rss" href="https://leblancfg.com/feeds/all.atom.xml" target="_blank">
+            <i class="fas fa-rss">
+            </i>
+          </a></li>
       </ul>
     </div>
 
@@ -107,10 +125,28 @@
   </header>
   <div>
     <dl>
+      <dt>June 30, 2019</dt>
+      <dd><a href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html">CrossFit Open 2019 Analysis - Exercise Statistics</a></dd>
+      <dt>June 15, 2019</dt>
+      <dd><a href="https://leblancfg.com/crossfit_open_2019_analysis_benchmark_workouts.html">CrossFit Open 2019 Analysis - Benchmark Workouts</a></dd>
+      <dt>June 01, 2019</dt>
+      <dd><a href="https://leblancfg.com/crossfit_open_2019_analysis_athlete_statistics.html">CrossFit Open 2019 Analysis - Athlete Statistics</a></dd>
       <dt>December 03, 2018</dt>
       <dd><a href="https://leblancfg.com/installing-azure-cli-on-manjaro-arch-with-anaconda.html">Installing the Azure CLI on Manjaro (Arch) with Anaconda</a></dd>
+      <dt>September 14, 2018</dt>
+      <dd><a href="https://leblancfg.com/unhashable-python-unique-locations-geometry-geodataframe.html">Unhashable in Python - Getting the unique number of locations in a GeoDataFrame</a></dd>
       <dt>August 24, 2018</dt>
       <dd><a href="https://leblancfg.com/installing-cuda-cudnn-tensorflow-nvidia-gtx960.html">Notes on installing CUDA, CuDNN and Tensorflow on Manjaro</a></dd>
+      <dt>June 14, 2018</dt>
+      <dd><a href="https://leblancfg.com/higher-level-functions-python-filter.html">Higher-level functions in Python, Part 3 - filter</a></dd>
+      <dt>June 04, 2018</dt>
+      <dd><a href="https://leblancfg.com/higher-level-functions-python-reduce.html">Higher-level functions in Python, Part 2 - reduce</a></dd>
+      <dt>May 30, 2018</dt>
+      <dd><a href="https://leblancfg.com/higher-level-functions-python-map.html">Higher-level functions in Python, Part 1 - map</a></dd>
+      <dt>August 10, 2017</dt>
+      <dd><a href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-2.html">Introduction to the Python Scientific Ecosystem, Part 2</a></dd>
+      <dt>August 03, 2017</dt>
+      <dd><a href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-1.html">Introduction to the Python Scientific Ecosystem, Part 1</a></dd>
     </dl>
   </div>
 </article>
