--- a/crossfit_open_2019_analysis_benchmark_workouts.html
+++ b/crossfit_open_2019_analysis_benchmark_workouts.html
@@ -46,12 +46,12 @@
     <meta name="msapplication-TileColor" content="#330033">
 
 <meta name="author" content="François Leblanc" />
-<meta name="description" content="In this final article on 2019 CrossFit Open athlete statistics, we take a look at the spread of times for the sport&#39;s iconic workouts: Fran, Grace, Helen, Filthy Fifty, and Fight Gone Bad." />
+<meta name="description" content="In this final article on 2019 CrossFit Open athlete statistics, we take a look at the spread of times for CrossFit&#39;s iconic workouts: Fran, Grace, Helen, Filthy Fifty, and Fight Gone Bad." />
 <meta name="keywords" content="crossfit, python, summary statistics, athlete">
 
 <meta property="og:site_name" content="leblancfg.com"/>
 <meta property="og:title" content="CrossFit Open 2019 Analysis - Benchmark Workouts"/>
-<meta property="og:description" content="In this final article on 2019 CrossFit Open athlete statistics, we take a look at the spread of times for the sport&#39;s iconic workouts: Fran, Grace, Helen, Filthy Fifty, and Fight Gone Bad."/>
+<meta property="og:description" content="In this final article on 2019 CrossFit Open athlete statistics, we take a look at the spread of times for CrossFit&#39;s iconic workouts: Fran, Grace, Helen, Filthy Fifty, and Fight Gone Bad."/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://leblancfg.com/crossfit_open_2019_analysis_benchmark_workouts.html"/>
 <meta property="og:type" content="article"/>
@@ -2669,6 +2669,13 @@ if (outputEl) {{
     (document.body || document.getElementsByTagName('head')[0]).appendChild(mathjaxscript);
 }
 </script>
+
+
+<!-- Plotly -->
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
+<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>
+
 
   </div>
   <div class="tag-cloud">
