--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </p>
   </header>
   <div>
-      <p>In this article, we take a deeper dive into the various benchmark exercise times and weights for the 2019 CrossFit Open athletes, including running, squat, deadlift, clean &amp; jerk, and snatch.</p>
+      <p>In this article, we take a deeper dive into the various benchmark exercise times and weights for the 2019 CrossFit Open athletes, including sprinting, running, squat, deadlift, clean &amp; jerk, and snatch.</p>
         <br>
         <a class="btn" href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html#crossfit_open_2019_analysis_exercise_statistics">    Continue reading
 </a>
@@ -148,7 +148,7 @@
     </p>
   </header>
   <div>
-      <p>In this final article on 2019 CrossFit Open athlete statistics, we take a look at the spread of times for the sport's iconic workouts: Fran, Grace, Helen, Filthy Fifty, and Fight Gone Bad.</p>
+      <p>In this final article on 2019 CrossFit Open athlete statistics, we take a look at the spread of times for CrossFit's iconic workouts: Fran, Grace, Helen, Filthy Fifty, and Fight Gone Bad.</p>
         <br>
         <a class="btn" href="https://leblancfg.com/crossfit_open_2019_analysis_benchmark_workouts.html#crossfit_open_2019_analysis_benchmark_workouts">    Continue reading
 </a>
